feat: Centralize contact and link information
Refactors the project to use a constants file for all external links and personal information. This improves maintainability and ensures consistency across the application.

Updates package.json and metadata.json to reflect the correct project name.
Replaces hardcoded links and text in Header, Footer, Home, and ProductPage components with references to the new constants.
Introduces AI consultation links in the ProductPage.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "copy-of-usana-권미경---건강과-성공의-파트너",
+  "name": "usana-권미경---건강과-성공의-파트너",
   "private": true,
   "version": "0.0.0",
   "type": "module",
